--- a/extras/dada-web-react/src/content.mdx
+++ b/extras/dada-web-react/src/content.mdx
@@ -1,3 +1,12 @@
+import Ide from "./features/ide"
+ 
 # Hello, world!
 
 This is **markdown** with <span style={{color: "red"}}>JSX</span>: MDX!
+
+<Ide sourceText="
+async fn main() {
+    print(22).await
+}
+"/>
+
