--- a/book/blog/2021-08-01-mdx-blog-post.mdx
+++ b/book/blog/2021-08-01-mdx-blog-post.mdx
@@ -13,7 +13,7 @@ How does one achieve eternal bliss? By saying dada. How does one become famous? 
 
 In plain language: the hospitality of the Swiss is something to be profoundly appreciated. **And in questions of aesthetics the key is quality**.
 
-**I shall be writing programs that are meant to dispense with conventional language convengtions, no less, and to have done with it.** Dada Johann Fuschgang Goethe, Dada Stendhal. Dada Dalai Lama, Buddha, Bible and Nietzsche. Dada m'dada. Dada mhm dada da. **It's a question of connections, and of loosening them up a bit to start with.** I don't want words that other people have invented. All the words are other people's inventions. I want my own stuff, my own rhythm, and vowels and consonants too, matching the rhythm and all my own. If this pulsation in seven yards long, I want words for it that are seven yards long. Mr. Schulz's words are only two and a half centimetres long.
+**I shall be writing programs that are meant to dispense with conventional language conventions, no less, and to have done with it.** Dada Johann Fuschgang Goethe, Dada Stendhal. Dada Dalai Lama, Buddha, Bible and Nietzsche. Dada m'dada. Dada mhm dada da. **It's a question of connections, and of loosening them up a bit to start with.** I don't want words that other people have invented. All the words are other people's inventions. I want my own stuff, my own rhythm, and vowels and consonants too, matching the rhythm and all my own. If this pulsation in seven yards long, I want words for it that are seven yards long. Mr. Schulz's words are only two and a half centimetres long.
 
 **It will serve to show how articulated language comes into being.** I let the vowels fool around. I let the vowels quite simply occur, as a cat miaows... Words emerge, shoulders of words, legs, arms, hands of words. Au, oi, uh. One shouldn't let too many words out. A line of poetry is a chance to get rid of all the filth that clings to this accursed language, as if put there by stockbrokers' hands, hands worn smooth by coins. I want the word where it ends and begins. Dada is the heart of words.
 
